Add Flask application for fetching asteroid data from NASA API
- Implemented a new Flask app in `index.py` to retrieve asteroid orbital and close approach data from NASA's NeoWs API.
- Added endpoint `/asteroid/<asteroid_id>` to handle GET requests and return cleaned JSON data for frontend use.
- Extracted relevant orbital elements, close approach information, and physical properties of asteroids.
- Introduced CORS support in `temp.py` to allow cross-origin requests.
- Included error handling for API response failures.

--- a/Nasa-frontend/html/menu.html
+++ b/Nasa-frontend/html/menu.html
@@ -217,12 +217,13 @@
                 <p>Real-time tracking data</p>
             </div>
             </a>
-            <div class="game-button" id="btn-research">
+          <a href="./research/research-mode.html">  <div class="game-button" id="btn-research">
                 <span class="icon">🔬</span>
                 <h2>Research Mode</h2>
                 <p>Conduct space research</p>
                 <p>Advanced analysis tools</p>
             </div>
+        </a>
             <div class="game-button" id="btn-articles">
                 <span class="icon">📚</span>
                 <h2>Space Articles</h2>
